--- a/tinymce-react-demo/index.html
+++ b/tinymce-react-demo/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://i.pinimg.com/736x/ba/21/58/ba2158f2c08b176cba6a75fce4b3524c.jpg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Edition Of Blog</title>
+    <title>Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
